# pip-module-template

./: LICENSE  README.md  entry_points.cfg  setup.cfg
.github/workflows/: pythonapp.yml
sample_module/: main.py
