[metadata]
name = pip-module-template
version = attr:sample_module.__version__
author = author
author_email = author@mail.com
description = module description
long_description = file:README.md
url = https://your.repository.com/
license = MIT License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
# install_requires =
#   module1
#   module2
entry_points = file:entry_points.cfg
